Move Actions to the left

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ body.pro-layout-active .statement-resize-handle {
 
 body.pro-layout-active .cg-ide .statement-bloc {
     top: 0 !important;
-    bottom: 0 !important;
+    bottom: 252px !important;
     height: auto !important;
 }
 
@@ -49,12 +49,13 @@ body.pro-layout-active .cg-ide .testcases-actions-container {
     height: 252px !important;
     top: auto !important;
     bottom: 0 !important;
+    left: 0 !important;
 }
 
 body.pro-layout-active .cg-ide .console-bloc {
     height: auto !important;
     top: 0 !important;
-    bottom: 252px !important;
+    bottom: 0 !important;
     right: 0 !important;
     margin-top: 0;
 }
