--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@
     height: 100%;
     align-items: center;
     float: right;
+    margin-right: 10px;
 }
 
 /* --- TOGGLEABLE STYLES FOR THE "PRO LAYOUT" --- */
